testsuite/tests/rename/should_fail/T13644.stderr

T13644.hs:6:24: error: [GHC-53822]
    • Constructor ‘FuncId’ does not have field ‘name’
    • In the pattern: FuncId {name = nm}
      In an equation for ‘baseENDECfuncs’:
          baseENDECfuncs FuncId {name = nm} = undefined
